# Auriel

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py
database/: __init__.py  session.py
models/: __init__.py  base.py  delivery.py  user.py
routers/: __init__.py  deliveries.py  root.py
schemas/: __init__.py  delivery.py  example.py
test/: __init__.py  conftest.py  test_deliveries.py  test_root.py
