[tool.poetry]
name = "test"
version = "0.1.0"
description = "Starter FastAPI/Postgres project"
authors = ["your-name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.22"}
SQLAlchemy = "^2.0"
asyncpg = "^0.27"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.21"
httpx = "^0.24"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
